--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,15 @@
 [tool.poetry]
 name = "ky3m"
-version = "0.1.0"
+version = "0.1.0.1"
 description = "Minecraft Mod Manager by Leon \"Procybit\" Shepelev"
 authors = ["Leon \"Procybit\" Shepelev <kyleusnaff@gmail.com>"]
 license = "MIT"
+readme = "README.md"
+repository = "https://github.com/Procybit/Ky3M"
+keywords = ["minecraft"]
 packages = [
     { include = "ky3m" },
 ]
-readme = "README.md"
-
 
 [tool.poetry.dependencies]
 python = "^3.10"
@@ -19,3 +20,6 @@ toml = "~0.10"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.urls]
+"Report a Bug!" = "https://github.com/Procybit/Ky3M/issues"
